--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://saurabhpandat27:olMvwBr4GRqEw736@cluster0.nodiwnn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+CORS_ORIGIN=*
